--- a/content/05.methods.md
+++ b/content/05.methods.md
@@ -1,30 +1,29 @@
 ## Methods
-A tutorial for how to use Metaboverse can be found at https://metaboverse.readthedocs.io/en/latest/content/general-usage.html.
+A tutorial for how to use Metaboverse can be found at https://metaboverse.readthedocs.io/en/latest/content/general-usage.html. For the most up-to-date instructions and details of available features, we refer the user to this documentation.
 
 ### 1. Network curation
-Biological networks are curated using the current version of the Reactome database. In particular, the pathway records for each species, complex component and interaction data, Ensembl, and UniProt Reactome mapping tables are integrated into the network database for Metaboverse. Additionally, the ChEBI and The Human Metabolome databases are also referenced for metabolite synonym mapping [@doi:10.1093/nar/gkv1031; @doi:10.1093/nar/gkx1089]. These data are used to generate a series of mapping dictionaries for entities to reactions and reactions to pathways for the curation of the global network.
+Biological networks are curated using the current version of the Reactome database. In particular, the pathway records and Ensembl- and UniProt-Reactome mapping tables are integrated into the network database for Metaboverse. Additionally, the ChEBI and The Human Metabolome databases are also referenced for metabolite synonym mapping to accept more flexible metabolite input nomenclature from the user [@doi:10.1093/nar/gkv1031; @doi:10.1093/nar/gkx1089]. These data are used to generate a series of mapping dictionaries for entities to reactions and reactions to pathways for the curation of the total reaction network.
 
-After the relevant information is parsed from each table or record, the global network is propagated using the NetworkX framework [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf] to generate nodes for each reaction and reaction component and edges connecting components to the appropriate reactions. In some cases, a separate ID is used to generate two nodes for the same metabolite within two separate compartments to aid in downstream visualization; however, user data for the given entity would be properly mapped to both nodes.
+After the relevant information is parsed from each table or record, the global network is propagated using the NetworkX framework [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf] to generate nodes for each reaction and reaction component and edges connecting components to the appropriate reactions. In some cases, a separate ID is used to generate two nodes for the same metabolite within two separate compartments to aid in downstream visualization; however, user data for the given entity would be mapped to both nodes.
 
 After the network is curated for the user-specified organism, each node's degree (or magnitude of edges or connections) is determined to aid in the user's downstream ability to avoid visualizing high-degree components, such as a proton or water, on the metabolic network, which can lead to visual network entanglement and cluttering and a decrease in computational performance [@doi:10.1093/gigascience/giz137].
 
 ### 2. Data overlay and broadcasting for missing entities
-In order to overlay user data on the global network, first, user-provided gene expression, protein abundance, and/or metabolite abundances' names are mapped to Metaboverse compatible identifiers. For components that Metaboverse is unable to map, a list will be returned to the user so they can provide alternative names to aid in mapping. Second, provided data values are mapped to the appropriate nodes in the network. In cases where gene expression data are available, but protein abundance data is missing, Metaboverse will take the average of the available gene expression values to broadcast to the protein node. For complexes, all available component values (metabolites, proteins, etc.) are averaged. Nodes for which values were inferred will be marked by a dashed border during visualization to clearly show which values are known and which were inferred. Statistical values are derived from the highest value of the components (assuming a scale of 1 denotes no statistical significance and 0 denotes high statistical significance).
+In order to overlay user data on the global network, first, user-provided gene expression, protein abundance, and/or metabolite abundances' names are mapped to Metaboverse compatible identifiers. For components that Metaboverse is unable to map, a table is returned to the user so they can provide alternative names to aid in mapping. Second, provided data values are mapped to the appropriate nodes in the network. In cases where gene expression data are available, but protein abundance values are missing, Metaboverse will take the average of the available gene expression values to broadcast to the protein node. For complexes, all available component values (metabolites, proteins, etc.) are averaged. Nodes for which values were inferred will be marked by a dashed border during visualization to clearly show which values are known and which were inferred. Statistical values are derived from the highest value of the components (assuming a scale of 1 denotes no statistical significance and 0 denotes high statistical significance).
 
 ### 3. Collapsing reactions with missing expression or abundance values in user data
-After data mapping is complete, Metaboverse will generate a collapsed network representation for optional viewing during later visualization. We did, however, choose to enforce a limit of up to three reactions that can be collapsed as data down a pathway should be inferred only so far. We also enforced certain parameters for reaction collapse as follows:   
+After data mapping is complete, Metaboverse will generate a collapsed network representation for optional viewing during later visualization. Metaboverse enforces a limit of up to three reactions that can be collapsed as data down a pathway should be inferred only so far. Additional parameters for reaction collapse are as follows:   
 
-1. If a reaction has at least one known or inferred value for inputs (substrates) and one known or inferred value for outputs (products), the reaction will be left as is. During the entire reaction collapse step, known catalysts are included when assessing whether a reaction has measured output values (more of a catalyst should lead to more output in most cases), and inhibitors are included when assessing whether the reaction has measured input values (more inhibitor should lead to an accumulation of input in most cases). Catalysts and inhibitors are not included when determining reaction neighbors, as described below.   
-
-2. If a reaction has at least one known input, the input is left as is, and each reaction that shares the same input with the assessed reaction inputs is determined whether it has a measured output. If the neighbor reaction does not contain a known output value, the reaction is left as is. If the neighboring reaction does contain a measured output, the original reaction's inputs and the neighboring reaction's outputs are collapsed to form a single, pseudo-reaction between the two. If the reaction has at least one known output, the inverse is performed where neighbors with components identical to the reaction's inputs are assessed for whether a collapsed reaction can be created.   
-
+1. If a reaction has at least one known or inferred value for inputs (substrates) and one known or inferred value for outputs (products), the reaction will be left as is. During the entire reaction collapse step, known catalysts can be included when assessing whether a reaction has measured output values (increased catalyst should lead to more output in most cases), and inhibitors can be included when assessing whether the reaction has measured input values (increased inhibitor should lead to an accumulation of input in most cases). Catalysts and inhibitors are not included when determining reaction neighbors, as described below.   
+2. If a reaction has at least one known input, the input is left as is, and each reaction that shares the same inputs with the first reaction's outputs is determined whether it has a measured output. If the neighbor reaction does not contain a known output value, the reaction is left as is. If the neighboring reaction does contain a measured output, the first reaction's inputs and the neighboring reaction's outputs are collapsed to form a single, pseudo-reaction between the two. If the reaction has at least one known output, the inverse is performed where neighbors with components identical to the reaction's inputs are assessed for whether a collapsed reaction can be created.   
 3. If a reaction has no measured values, it is determined if the neighboring reactions on both sides (one sharing the reaction's inputs and other sharing the reaction's outputs) have measured values. If both neighbors contain a measured value, a collapsed pseudo-reaction is created, summarizing all three reactions.
+4. All other reactions are maintained as is in the network.
 
-For pseudo-reactions, appropriate notes are included to describe the collapse. During visualization, these pseudo-reactions are marked by black dashed edges and dashed node borders. A graphical representation of how this reaction collapse scheme is executed can be found in Figure @fig:collapse_schematic.
+For collapsed reactions, appropriate notes are included to describe the collapse. During visualization, these collapsed reactions are marked by black dashed edges and dashed node borders. A graphical representation of how this reaction collapse scheme is executed can be found in Figure @fig:collapse_schematic.
 
 ![
   **Reaction node collapse schematic.**
-  (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
+  (a) For reactions for which at least one input and at least one output component contain a measured value from the user data, the reaction will be maintained as is. (b) When an input of a reaction is known, but no output has a known value, Metaboverse will search for all neighboring reactions that contain identical inputs. If the neighboring reaction has a known output value, the two reactions will be merged into one pseudo-reaction. (c) When an output of a reaction is known, but no input has a known value, Metaboverse will search for all neighboring reactions that contain identical outputs. If the neighboring reaction has a known input value, the two reactions will be merged into one pseudo-reaction. (d) For reactions with no known values, neighbor pairs that match the inputs and outputs of the considered reaction will be evaluated for whether their respective outputs and inputs both have known values. If values are known for both neighbors, the three reactions will be merged into one pseudo-reaction. (e) As in (d), but if one neighbor does not contain a value and the other does contain a value, no reaction merging will be performed. (f) As in (d), but if neither neighbors contain known values, no reaction merging will be performed. (g) demonstrates how reactions with multiple paths are each collapsed to a representative reaction. An asterisk (*) indicates the target reaction being considered for a given reaction collapse. A red node indicates a reaction input or output with a measured value. A white node indicates a reaction input or output with no measured value. A gray node indicates a reaction. A gray node with a dashed border indicates a pseudo-reaction. A solid edge indicates a known relationship. A dashed edge indicates a relationship inferred via reaction merging.
 ](./content/figures/collapse_schematic.png "Tall image"){#fig:collapse_schematic height=6in}
 
 ### 4. Regulatory pattern searches and sorting
@@ -32,31 +31,31 @@ Metaboverse provides a variety of different regulatory patterns for the user to 
 
 The identified reaction patterns will be listed in a stamp view. Each stamp represents a reaction, with a glyph of the reaction, or the name of the pathway on it. In this stamp view, the identified patterns can be sorted according to three criteria: the number of pathways containing the reaction (not applicable for pathway pattern identification), the magnitude change of the computed value, and the statistical significance. When sorting by the number of pathways or the magnitude change, the identified reactions are arranged in order from the largest to the smallest. When sorting by the statistical significance, reactions with statistical significance on both the input side (substrates) and the output side (products) are listed first by the product of their maximum statistics, followed by the reactions with statistical significance on one of the two sides, and finally the reactions with no statistical significance on both sides. Within each tier, the reactions are sorted from lowest to highest p-values. For all values or statistics used in sorting, only those that determined the reaction pattern are used.
 
-When the stamp view demonstrates draws reaction patterns, all the pathways containing the corresponding reactions will be listed below the stamp view by clicking on the appropriate stamp. For pathway patterns, clicking on a pathway ID will draw the selected pathway as a network, with all the potential regulatory reaction patterns in this pathway highlighted.
+When a reaction is selected from the stamp view, all the pathways containing the corresponding reactions will be listed below the stamp. Clicking on a pathway ID will draw the selected pathway in which the reaction pattern was found, with all of the other reaction patterns within this pathway also highlighted. For time-course and multi-condition datasets, the selected reaction pattern's total behavior is displayed below these windows as line-plots showing the reaction components' behavior across all time-points or conditions.
 
 ### 5. Nearest neighborhood searches and prioritization
-To visualize all global connections, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects a change of one entity might have across the global network, which consequently aids in bridging and identifying any reaction that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the app.
+To visualize all connections to a given network component, a user can select an entity (a gene, protein, or metabolite) and visualize all reactions in which the component is involved. By doing so, the user can visualize other downstream effects the change of one entity might have across the total network, which consequently aids in bridging and identifying any reaction that may occur between canonically annotated pathways. These neighborhoods can be expanded to view multiple downstream reaction steps and their accompanying genes, proteins, and metabolites by modulating the appropriate user option in the software.
 
-The user can also limit which entities are shown by enforcing a degree threshold. By setting this value at 50, for example, the network would not show nodes that have 50 or more connections. One caveat, however, is that this collapsing scheme will occasionally break synchronous pathways into multiple pieces if one of these high-degree nodes were the bridge between two sides of a pathway.
+The user can also limit which entities are shown by enforcing a degree threshold. By setting this value at 50, for example, the network would not show nodes that have 50 or more connections. One caveat, however, is that this feature will occasionally break synchronous pathways into multiple pieces if one of these high-degree nodes formed the bridge between two ends of a pathway.
 
 ### 6. Perturbation networks
-Perturbation networks are generated by searching each reaction in the global network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user thus could represent log<sub>2</sub> fold changes, z-scores, or any other unit appropriate in the biological context.
+Perturbation networks are generated by searching each reaction in the total reaction network for any reaction where at least one component is significantly perturbed. The user can modify the necessary criteria to base the search on the expression or abundance value or the statistical value and can choose the thresholding value to be used. For the expression thresholding, the provided value is assumed to be the absolute value, so a thresholding value of 3 would include any reactions where at least one component showed a greater than 3 measured change or less than -3 measured change, the value of which is dependent on the data provided by the user. Thus, this could represent log<sub>2</sub> fold changes, z-scores, or any other unit appropriate in the biological context.
 
 Once a list of perturbed reactions is collected, the network is constructed, including each of these reactions and their components. Perturbed neighboring reactions that share components are thus connected within the network, and perturbed reactions that are not next to other perturbed reactions are shown as disconnected sub-networks.
 
 ### 7. Network visualization and exploration
 #### 7.1 Dynamic network plotting
-The user interacts with Metaboverse through an interactive app interface. The app employs Electron, a cross-platform app framework that uses JavaScript, HTML, and CSS to design the interface. Metaboverse thus comes packaged as a single executable app with all necessary dependencies included for running on Linux, macOS, and Windows.
+The user interacts with Metaboverse through an interactive app interface. Metaboverse comes packaged as a single executable app with all necessary dependencies included for running on Linux, macOS, and Windows.
 
-Interactive visualization is handled using the D3 and JQuery JavaScript libraries. Force-directed layouts of networks are constructed by taking a user-selected pathway or entity and querying the reactions that are components of the selected pathway or entity. All inputs, outputs, modifiers, and other components of these reactions, along with edges where both source and target are found in the sub-network as nodes, are included and plotted. Relevant metadata, such as user-provided data and reaction descriptions, can be accessed by the user in real-time. Metadata for categorical displays, such as edge or node type, are extracted from the metadata during visualization of the sub-network.
+Force-directed layouts of networks are constructed by taking a user-selected pathway or entity and querying the reactions that are components of the selected pathway or entity. All inputs, outputs, modifiers, and other components of these reactions, along with edges where both source and target are found in the sub-network as nodes, are included and displayed. Relevant metadata, such as user-provided data and reaction descriptions, can be accessed by the user in real-time.
 
-Some performance optimization features are included by default to prevent computational overload. For example, nearest neighbor sub-networks with more than 1500 nodes, or nodes with more than 500 edges, will not be plotted because the plotting of this information in real-time can be quite slow.
+Some performance optimization features are included by default to prevent computational overload. For example, nearest neighbor sub-networks with more than 1,500 nodes, or nodes with more than 500 edges, will not be plotted because the plotting of this information in real-time can be quite slow.
 
 #### 7.2 Visualizing pathways and super-pathways
-To visualize a pathway, a user selects their pathway of choice, and all component reactions and their substrates, products, modifiers, and metadata are queried from the global network. Super-pathways help categorize these pathways and are defined as any pathway containing more than 200 nodes.
+To visualize a pathway, a user selects their pathway of choice, and all component reactions and their substrates, products, modifiers, and metadata are queried from the total reaction database. Super-pathways help categorize these pathways and are defined as any pathway containing more than 200 nodes.
 
-#### 7.3 Visualizing timecourse and multiple condition experiments
-Timecourse and multiple condition experiments are automatically detected from the user's input data. When the user provides these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
+#### 7.3 Visualizing time-course and multiple condition experiments
+Time-course and multiple condition experiments are automatically detected from the user's input data. When the user provides these data and specifies the appropriate experimental parameters on the variable input page, they will have the option to provide time point or condition labels. Provided data should be listed in the data table in the same order that the labels are provided. Within all visualization modules, the data for each time point or condition can then be displayed using a slider bar, which will allow the user to cycle between time points or conditions.
 
 #### 7.4 Visualizing compartments
 Compartments are derived from Reactome annotations. Compartment visualizations are generated using D3's hull plotting feature. Compartment boundaries are defined at the reaction levels and made to encompass each reaction's substrates, products, and modifiers for that given compartment.
@@ -71,13 +70,13 @@ Metaboverse will continue to undergo development, and new features will be added
 As gene components can crowd the network visualization space, the user can toggle gene display on and off using the appropriate button. The network is then refreshed to either include or ignore gene components based on their node meta-tag.
 
 ##### 7.6b Toggling values
-The user can switch between coloring nodes based on the value or statistic provided by toggling the appropriate button. Color bar information for the dataset is saved in the network metadata during curation and used to generate a color bar.
+The user can switch between coloring nodes based on the value provided by toggling the appropriate button. Color bar information for the dataset is saved in the network metadata during curation and used to generate a color bar. Statistically significant nodes, as determined by the user's input threshold, are displayed with bold node borders.
 
 ##### 7.6c Toggling features/labels
-By default, reaction and feature labels are displayed by hovering the mouse over the node. Reaction or feature nodes can have the labels statically displayed by selecting the appropriate button. An event watch function is used to watch for this user selection and update the display of the node labels.
+By default, reaction and feature labels are displayed by hovering the mouse over the node. Reaction or feature nodes can have the labels statically displayed by selecting the appropriate button.
 
 ##### 7.6d Toggling collapsed reactions
-By selecting the appropriate button, the user can toggle between displaying a full or collapsed pathway representation of the sub-network. By selecting this button, the network is refreshed using the appropriate reaction dictionary, where for visualization of the collapsed representation, a reaction with available pseudo-reactions substituted for the original reactions is included for network visualization.
+By selecting the appropriate button, the user can toggle between displaying a full or collapsed pathway representation of the sub-network. By selecting this button, the network is refreshed using the appropriate reaction dictionary, where for visualization of the collapsed representation, a reaction with available collapsed reactions substituted for the original reactions is included for network visualization.
 
 ##### 7.6e Viewing curated pathway image
 Metaboverse visualizes networks dynamically, but the user may be more familiar or comfortable with classical, curated pathway layouts when exploring their data. For a given pathway network, the user can select the appropriate button, and Metaboverse will open a new window with the Reactome curated pathway layout.
@@ -89,10 +88,10 @@ The user can generate a PNG output file for any network created in Metaboverse b
 The number of nearest neighbors to visualize, or the limit to the number of edges a visualized node can have, can be modulated by the user using the appropriate input spaces. When visualizing a nearest neighbors network, Metaboverse will recursively fetch related reactions and their neighbors until the critical node display threshold is reached. This searching capability allows the user to visualize downstream effects of a change that may propagate across several reactions. The hub threshold option prevents the plotting of nodes with more than the specified number of edges. This thresholding is handled during the visualization process by excluding any entity nodes that meet these criteria as the neighborhood is propagated. This thresholding is particularly useful in removing hub nodes, such as water or protons, which may be less relevant to the user experience and can quickly clutter the network visualization. This feature can also help plot more extensive neighborhoods, as often neighborhoods quickly link to high-degree nodes, such as water, and limit visualization clarity.
 
 ##### 7.6h Metadata display
-To help inform the user of selection information and relevant metadata, a space in the legend bar during visualization is reserved for displaying this information, which is updated based on the user's node selections.
+To help inform the user of selection information and relevant metadata, a space in the legend bar during visualization is reserved for displaying this information, which is updated based on the user's node selections. Compartment and node legends are available for the user's reference by hovering over the appropriate icons.
 
 ### 8. Packaging
-The Metaboverse app is packaged using Electron. Back-end network curation and data processing are performed using Python and the NetworkX library. Front-end visualization is performed using Javascript and relies on the D3 and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg and string-pixel-width packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript can be accessed at https://github.come/Metaboverse/manuscript.
+The Metaboverse app is packaged using Electron [@url:https://electronjs.org] . Back-end network curation and data processing are performed using Python [@url:https://www.python.org/] and the NetworkX library [@url:http://conference.scipy.org/proceedings/SciPy2008/paper_2/full_text.pdf]. This back-end functionality is packaged as a single, operating system-specific executable using the PyInstaller library [@url:https://www.pyinstaller.org] and is available to the app's visual interface for data processing. Front-end visualization is performed using Javascript and relies on the D3 [@url:https://d3js.org] and JQuery packages. Saving network representations to a PNG file is performed using the d3-save-svg [@url:https://github.com/edeno/d3-save-svg] and string-pixel-width [@url:https://github.com/adambisek/string-pixel-width] packages (Table @tbl:dependencies). Documentation for Metaboverse is available at https://metaboverse.readthedocs.io. Continuous integration services are performed by Travis CI [@url:https://travis-ci.org/] to routinely run test cases for each change made to the Metaboverse architecture. The Metaboverse source code can be accessed at https://github.com/Metaboverse/metaboverse. The code used to draft and revise this manuscript, as well as all associated scripts used to generate and visualize the data presented in this manuscript can be accessed at https://github.come/Metaboverse/manuscript.
 
 | Name               | Reference                              |
 |--------------------|----------------------------------------|
@@ -127,11 +126,11 @@ RNA sequencing data were generated by growing <i>Saccharomyces cerevisiae</i> bi
 
 ##### Sequence analysis
 
-Sequence FASTQ files were processed using XPRESSpipe [@doi:10.1371/journal.pcbi.1007625]. Batch and log files are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1_omics]. Notably, reads were trimmed of adapters (AGATCGGAAGAGCACACGTCTGAACTCCAGTCA). Based on library complexity quality control, de-duplicated alignments were used for read quantification due to the high number of duplicated sequences in each library. Differential expression analysis was performed using DESeq2 [@doi:10.1186/s13059-014-0550-8] by comparing <i>mct1</i>&Delta; samples with wild-type samples at the 12-hour time-point to match the steady-state proteomics data. log<sub>2</sub>(fold change) and false discovery rate ("p-adj") values were extracted from the DESeq2 output.
+Sequence FASTQ files were processed using XPRESSpipe (v0.6.0) [@doi:10.1371/journal.pcbi.1007625]. Batch and log files are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1_omics]. Notably, reads were trimmed of adapters (AGATCGGAAGAGCACACGTCTGAACTCCAGTCA). Based on library complexity quality control, de-duplicated alignments were used for read quantification due to the high number of duplicated sequences in each library. Differential expression analysis was performed using DESeq2 [@doi:10.1186/s13059-014-0550-8] by comparing <i>mct1</i>&Delta; samples with wild-type samples at the 12-hour time-point to match the steady-state proteomics data. log<sub>2</sub>(fold change) and false discovery rate ("p-adj") values were extracted from the DESeq2 output.
 
 ##### Proteomics analysis
 
-Steady-state quantitative proteomics data were generated as described in [@doi:10.1016/j.molcel.2018.06.039]. Briefly, cells were grown in glucose and switched to raffinose-supplemented growth medium overnight and harvested at mid-log phase. For this analysis, we compared the <i>mct1</i>&Delta; (n=3) with the wild-type (n=3) cell populations. log<sub>2</sub>(fold change) values and Benjamini-Hochberg corrected p-values were generated by comparing <i>mct1</i>&Delta; with the wild-type cells. P-values were generated before correction using a 2-tailed, heteroscedastic Student's T-test.
+Steady-state quantitative proteomics data were generated as described in [@doi:10.1016/j.molcel.2018.06.039]. Briefly, cells were grown in glucose and switched to raffinose-supplemented growth medium overnight and harvested at mid-log phase. For this analysis, we compared the <i>mct1</i>&Delta; (n=3) with the wild-type (n=3) cell populations. log<sub>2</sub>(fold change) values and Benjamini-Hochberg corrected p-values were generated by comparing <i>mct1</i>&Delta; with the wild-type cells. P-values were generated before correction using a 2-tailed, homoscedastic Student's T-test.
 
 ##### Metabolomics sample preparation
 
@@ -147,14 +146,14 @@ All GC-MS analysis was performed with an Agilent 5977b GC-MS MSD-HES and an Agil
 
 ##### Analysis of mass spectrometry data
 
-Data were collected using MassHunter software (Agilent). Metabolites were identified, and their peak area was recorded using MassHunter Quant. These data were transferred to an Excel spreadsheet (Microsoft, Redmond WA). Metabolite identity was established using a combination of an in-house metabolite library developed using pure purchased standards, the NIST and Fiehn libraries. Resulting data from all samples were normalized to the internal standard d4-succinate. P-values were derived using a heteroscedastic, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
+Data were collected using MassHunter software (Agilent). Metabolites were identified, and their peak area was recorded using MassHunter Quant. These data were transferred to an Excel spreadsheet (Microsoft, Redmond WA). Metabolite identity was established using a combination of an in-house metabolite library developed using pure purchased standards, the NIST and Fiehn libraries. Resulting data from all samples were normalized to the internal standard d4-succinate. P-values were derived using a homoscedastic, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
 
 #### 9.2 Human lung adenocarcinoma metabolomics
-Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and processed as in our previous re-study of these data [@doi:10.1093/gigascience/giz137]. P-values were derived using a paired, two-tailed Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
+Data were accessed from Metabolomics Workbench [@doi:10.21228/M8PG66] and processed as in our previous re-study of these data [@doi:10.1093/gigascience/giz137]. P-values were derived using a two-tailed, homoscedastic Student's T-test and adjusted using the Benjamini-Hochberg correction procedure.
 
 ### 10. Data availability
 
-<i>mct1</i>&Delta; and accompanying wild-type transcriptomics timecourse data is deposited at the GEO repository under identifier GSE151606 [@url:https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151606]. Metabolomics data is deposited at the Metabolomics Workbench repository under project identifier PR000961, study identifier ST001401 [@doi:10.21228/M8GD71].
+<i>mct1</i>&Delta; and accompanying wild-type transcriptomics time-course data is deposited at the GEO repository under identifier GSE151606 [@url:https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE151606]. Metabolomics data is deposited at the Metabolomics Workbench repository under project identifier PR000961, study identifier ST001401 [@doi:10.21228/M8GD71].
 
 The curated networks for these data are available at [@url:https://github.com/Metaboverse/manuscript/tree/master/data/sce_mct1]. Networks were generated by taking the 12-hour transcriptomics and proteomics datasets with their appropriate log<sub>2</sub>(fold change) and statistical values, along with the 0, 15, 30, 60, and 180 minute metabolomics datasets with their respective log<sub>2</sub>(fold change) and statistical values and layering these data on the <i>Saccharomyces cereviseae</i> global reaction network as curated by Metaboverse from the Reactome database. Reaction patterns and perturbation network analyses were performed within the Metaboverse platform.
 
