--- a/content/100.supplement.md
+++ b/content/100.supplement.md
@@ -1,7 +1,7 @@
 ## Supplementary Material {.page_break_before}
 
 ### Reaction collapsing reveals multi-reaction putative regulatory patterns
-Yeast timecourse metabolomics processed data were obtained as measured and discussed in this study in Vignette 1. Metaboverse reaction pattern searches identified a pattern across the two step transformation of glutathione and methylglyoxal into lactate at 60 minutes after carbon source shift. As the intermediate metabolite was not measured in the dataset, but the inputs to the first reaction and the outputs to the second reaction were measured, Metaboverse collapsed the two reactions into one, thus enabling pattern recognition across two reactions (Figure @fig:supp_fig_collapse). Conventional methods might have missed such a reaction without summarizing intermediate steps where the intermediate metabolite(s) are not measured. This transformation is particularly important in this model as lactate is closely tied with TCA metabolism and may provide explanatory mechanisms for the changes in TCA metabolism observed in this model.
+Yeast time-course metabolomics processed data were obtained as measured and discussed in this study in Vignette 1. Metaboverse reaction pattern searches identified a pattern across the two step transformation of glutathione and methylglyoxal into lactate at 60 minutes after carbon source shift. As the intermediate metabolite was not measured in the dataset, but the inputs to the first reaction and the outputs to the second reaction were measured, Metaboverse collapsed the two reactions into one, thus enabling pattern recognition across two reactions (Figure @fig:supp_fig_collapse). Conventional methods might have missed such a reaction without summarizing intermediate steps where the intermediate metabolite(s) are not measured. This transformation is particularly important in this model as lactate is closely tied with TCA metabolism and may provide explanatory mechanisms for the changes in TCA metabolism observed in this model.
 
 ![
   **Reaction collapsing reveals putative regulatory patterns across TCA metabolism-proximal reactions in mtFAS-deficient yeast.**
